<resources>
    <string name="app_name">Hangman</string>

    <string name="playGame">Play Game</string>
    <string name="settings">Settings</string>
    <string name="aboutUs">About Us</string>

    <string name="showHints">Show Hints?</string>
    <string name="customWords">Custom Words</string>
    <string name="uploadQuestions">Upload Questions</string>
    <string name="upload">Upload</string>
    <string name="reset">Reset</string>
    <string name="manage">Manage</string>
    <string name="addCustomWord">Add Word</string>
    <string name="emptyListText">Please click on Add Word</string>
    <string name="warningTextCustomWords">Maximum 50 Words</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="editTextQuestionHint">Question</string>
    <string name="editTextHintHint">Hint</string>
    <string name="editTextDifficultyHint">Difficulty</string>

    <string name="aboutUsDescription">We\'re the Toothbrush Clan\nDon\'t forget to floss</string>

    <string name="selectCategory">Select a Category: </string>
    <string name="categoryKids">Kids</string>
    <string name="categoryCars">Cars</string>
    <string name="categoryPlaces">Places</string>
    <string name="categoryHistory">History</string>
    <string name="categorySpace">Space</string>
    <string name="categoryAnimals">Animals</string>
    <string name="categoryPolitics">Politics</string>
    <string name="categoryFood">Food</string>
    <string name="categorySports">Sports</string>
    <string name="categoryDictionary">Dictionary</string>
    <string name="categoryRandom">Random</string>
    <string name="categoryCustom">Custom</string>

    <string name="selectDifficulty">Select a Difficulty: </string>
    <string name="difficultyEasy">Easy</string>
    <string name="difficultyMedium">Medium</string>
    <string name="difficultyHard">Hard</string>
    <string name="difficultyExtreme">Extreme</string>

    <string name="kids">kids</string>
    <string name="cars">cars</string>
    <string name="places">places</string>
    <string name="history">history</string>
    <string name="space">space</string>
    <string name="animals">animals</string>
    <string name="politics">politics</string>
    <string name="food">food</string>
    <string name="sports">sports</string>
    <string name="dictionary">dictionary</string>
    <string name="random">random</string>
    <string name="custom">custom</string>

    <string name="category">Category:</string>
    <string name="score">Score:</string>
    <string name="question">_ _ _</string>
    <string name="hint">Default Hint!</string>
    <string name="nextQuestion">Next Question</string>

    <string name="congratulations">Congratulations!</string>
    <string name="failure">Tough Luck!</string>
    <string name="noQuestions">No Questions Here</string>
    <string name="allDone">All Done!</string>
    <string name="proceedNext">Do you want to go to the next question?</string>
    <string name="checkBackSoon">No questions seem to be present in this category. Check back soon for more...</string>
    <string name="noMoreQuestions">You\'re all done with questions in this category...</string>
    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="goBack">Go Back?</string>
    <string name="gameInProgress">Are you sure? A game is in progress...</string>

    <string name="keyboardA">A</string>
    <string name="keyboardB">B</string>
    <string name="keyboardC">C</string>
    <string name="keyboardD">D</string>
    <string name="keyboardE">E</string>
    <string name="keyboardF">F</string>
    <string name="keyboardG">G</string>
    <string name="keyboardH">H</string>
    <string name="keyboardI">I</string>
    <string name="keyboardJ">J</string>
    <string name="keyboardK">K</string>
    <string name="keyboardL">L</string>
    <string name="keyboardM">M</string>
    <string name="keyboardN">N</string>
    <string name="keyboardO">O</string>
    <string name="keyboardP">P</string>
    <string name="keyboardQ">Q</string>
    <string name="keyboardR">R</string>
    <string name="keyboardS">S</string>
    <string name="keyboardT">T</string>
    <string name="keyboardU">U</string>
    <string name="keyboardV">V</string>
    <string name="keyboardW">W</string>
    <string name="keyboardX">X</string>
    <string name="keyboardY">Y</string>
    <string name="keyboardZ">Z</string>

    <color name="darkGreen">#2E7D32</color>
    <color name="darkRed">#D32F2F</color>

    <string name="dbShowHints">showHints</string>
    <string name="dbTrue">true</string>
    <string name="dbFalse">false</string>

</resources>
