<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textSelectCategory"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:text="@string/selectCategory"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/categoryLayout1">

        <Button
            android:id="@+id/categoryKids"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/categoryKids"/>

        <Button
            android:id="@+id/categoryCars"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:text="@string/categoryCars"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/categoryLayout2">

        <Button
            android:id="@+id/categoryPlaces"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/categoryPlaces"/>

        <Button
            android:id="@+id/categoryHistory"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:text="@string/categoryHistory"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/categoryLayout3">

        <Button
            android:id="@+id/categorySpace"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/categorySpace"/>

        <Button
            android:id="@+id/categoryAnimals"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:text="@string/categoryAnimals"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/categoryLayout4">

        <Button
            android:id="@+id/categoryPolitics"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/categoryPolitics"/>

        <Button
            android:id="@+id/categoryFood"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:text="@string/categoryFood"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/categoryLayout5">

        <Button
            android:id="@+id/categorySports"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/categorySports"/>

        <Button
            android:id="@+id/categoryDictionary"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:text="@string/categoryDictionary"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/categoryLayout6">

        <Button
            android:id="@+id/categoryRandom"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/categoryRandom"/>

        <Button
            android:id="@+id/categoryCustom"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:text="@string/categoryCustom"/>

    </LinearLayout>



</LinearLayout>