<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="40dp"
        android:textAllCaps="true"
        android:text="@string/app_name"/>

    <ImageView
        android:id="@+id/animation"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:src="@drawable/hangman9"/>

    <Button
        android:id="@+id/playGame"
        android:layout_width="150dp"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/playGame"/>

    <Button
        android:id="@+id/settings"
        android:layout_width="150dp"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/settings"/>

    <Button
        android:id="@+id/aboutUs"
        android:layout_width="150dp"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="80dp"
        android:text="@string/aboutUs"/>

</LinearLayout>