<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textSelectDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:text="@string/selectDifficulty"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/difficultyLayout1">
        <Button
            android:id="@+id/difficultyEasy"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/difficultyEasy"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/difficultyLayout2">
        <Button
            android:id="@+id/difficultyMedium"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/difficultyMedium"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/difficultyLayout3">
        <Button
            android:id="@+id/difficultyHard"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/difficultyHard"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/difficultyLayout4">
        <Button
            android:id="@+id/difficultyExtreme"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/difficultyExtreme"/>
    </LinearLayout>

</LinearLayout>