<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="20"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:text="@string/customWords"/>

    <Button
        android:id="@+id/addCustomWords"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/addCustomWord"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="18"
        android:weightSum="2"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:id="@+id/customWordsLayout">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/customWordsList" />

        <TextView android:id="@+id/empty"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/emptyListText" />

    </LinearLayout>

</LinearLayout>
